添加撤销和退款功能

--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -1472,11 +1472,11 @@
                         </p>
                         <p>
                             <label>原始流水号：</label>
-                            <input type="text" name="origQryId" value="" />
+                            <input type="text" name="orig_qry_id" value="" />
                         </p>
                         <p>
                             <label>原始订单号：</label>
-                            <input type="text" name="origOrderId" value="" />
+                            <input type="text" name="orig_order_id" value="" />
                         </p>
                         <p>
                             <label>&nbsp;</label>
