--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -1540,7 +1540,7 @@
                 </a>
             </label>
             <p>
-                <img src="https://raw.githubusercontent.com/Varorbc/ICanPay/2.0.0-alpha/reward.jpg" height="600" width="900" />
+                <img src="https://raw.githubusercontent.com/Varorbc/PaySharp/master/reward.jpg" height="600" width="900" />
             </p>
         </div>
     </div>
