--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             <h3>QQ交流群：</h3>
             <p><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=5b90bb440c4396b282ad30aac8bb8cd13e627f092deb83d7e6c2a638ab11f690"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="PaySharp 交流群" title="PaySharp 交流群"></a></p>
             <h3>使用方式：</h3>
-            <p>见示例项目：PaySharp.Demo</p>
+            <p>见示例项目：<a href="https://github.com/Varorbc/PaySharp/tree/master/sample/PaySharp.Demo" target="_blank">PaySharp.Demo</a></p>
         </div>
 
         <div id="tabs-api-alipay">
