--- a/sample/PaySharp.Demo/Views/Shared/_Layout.cshtml
+++ b/sample/PaySharp.Demo/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PaySharp.Demo</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/jquery-ui.min.css" asp-append-version="true">
     @RenderSection("Styles", required: false)
 </head>
