--- a/sample/PaySharp.Demo(Net)/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo(Net)/Views/Home/Index.cshtml
@@ -1488,7 +1488,7 @@
                         </p>
                         <p>
                             <label>流水号：</label>
-                            <input type="text" name="query_id" value="">
+                            <input type="text" name="trade_no" value="">
                         </p>
                         <p>
                             <label>&nbsp;</label>
