--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -1489,7 +1489,7 @@
                             </p>
                             <p>
                                 <label>流水号：</label>
-                                <input type="text" name="query_id" value="">
+                                <input type="text" name="trade_no" value="">
                             </p>
                             <p>
                                 <label>&nbsp;</label>
