银联支付改为中国银联

--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 <li><a href="#tabs-api-alipay">支付宝</a></li>
                 <li><a href="#tabs-api-wechatpay">微信支付</a></li>
                 <li><a href="#tabs-api-qpay">QQ钱包</a></li>
-                <li><a href="#tabs-api-unionpay">银联支付</a></li>
+                <li><a href="#tabs-api-unionpay">中国银联</a></li>
                 <li><a href="#tabs-api-allinpay">通联收银宝</a></li>
                 <li><a href="#tabs-support">赞助/支持</a></li>
             </ul>
