demo中添加日志

--- a/sample/PaySharp.Demo/Views/Home/Index.cshtml
+++ b/sample/PaySharp.Demo/Views/Home/Index.cshtml
@@ -604,7 +604,7 @@
                             </p>
                             <p>
                                 <label>场景信息：</label>
-                                <input type="text" name="scene_info" value="{'h5_info': {'type':'Wap','wap_url': 'https://pay.qq.com','wap_name': '腾讯充值'}}">
+                                <input type="text" name="scene_info" value="{&quot;h5_info&quot;:{&quot;type&quot;:&quot;Wap&quot;,&quot;wap_url&quot;:&quot;https://pay.qq.com&quot;,&quot;wap_name&quot;:&quot;腾讯充值&quot;}}">
                             </p>
                             <p>
                                 <label>&nbsp;</label>
